Add replication entry to pg_hba.conf file
This will allow streaming replication between appliances

https://trello.com/c/bRx6yN0C

--- a/TEMPLATE/var/opt/rh/rh-postgresql94/lib/pgsql/data/pg_hba.conf.erb
+++ b/TEMPLATE/var/opt/rh/rh-postgresql94/lib/pgsql/data/pg_hba.conf.erb
@@ -2,3 +2,4 @@
 local   all      all                 peer map=usermap
 <%= "#" if ssl%>host    all      all   all           md5
 <%= "#" unless ssl %>hostssl all      all   all           md5
+host  replication  all  all  md5
