Disable WAL sender timeout behavior
The default behavior is to disable replication (the wal sender)
after the destination is unreachable for 60 seconds

This behavior is controlled by the wal_sender_timeout parameter
in postgresql.conf
(https://www.postgresql.org/docs/current/static/runtime-config-replication.html#GUC-WAL-SENDER-TIMEOUT)

Setting this to 0 would disable the disconnect behavior
and allow replication to continue when the connection was restored

https://bugzilla.redhat.com/show_bug.cgi?id=1342255

--- a/TEMPLATE/var/opt/rh/rh-postgresql94/lib/pgsql/data/postgresql.conf.erb
+++ b/TEMPLATE/var/opt/rh/rh-postgresql94/lib/pgsql/data/postgresql.conf.erb
@@ -587,3 +587,4 @@ standard_conforming_strings = off	# MIQ Value not sure why this is enabled
 #custom_variable_classes = ''		# list of custom variable class names
 max_worker_processes = 10  # MIQ Value (pglogical)
 max_replication_slots = 10 # MIQ Value (pglogical)
+wal_sender_timeout = 0     # MIQ Value (pglogical)
