--- a/TEMPLATE/var/opt/rh/rh-postgresql95/lib/pgsql/data/postgresql.conf.erb
+++ b/TEMPLATE/var/opt/rh/rh-postgresql95/lib/pgsql/data/postgresql.conf.erb
@@ -195,6 +195,7 @@ checkpoint_completion_target = 0.9	# MIQ Value;
 #archive_command = ''		# command to use to archive a logfile segment
 #archive_timeout = 0		# force a logfile segment switch after this
 				# number of seconds; 0 disables
+wal_log_hints = on
 
 
 #------------------------------------------------------------------------------
