--- a/TEMPLATE/var/opt/rh/rh-postgresql95/lib/pgsql/data/postgresql.conf.erb
+++ b/TEMPLATE/var/opt/rh/rh-postgresql95/lib/pgsql/data/postgresql.conf.erb
@@ -60,14 +60,18 @@
 					# comma-separated list of addresses;
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
+listen_addresses = '*'
 #port = 5432				# (change requires restart)
-max_connections = 100			# (change requires restart)
+#max_connections = 100			# (change requires restart)
+max_connections = 1000
 #superuser_reserved_connections = 3	# (change requires restart)
 #unix_socket_directories = '/var/run/postgresql, /tmp'	# comma-separated list of directories
 					# (change requires restart)
 #unix_socket_group = ''			# (change requires restart)
+unix_socket_group = 'postgres'
 #unix_socket_permissions = 0777		# begin with 0 to use octal notation
 					# (change requires restart)
+unix_socket_permissions = 0770
 #bonjour = off				# advertise server via Bonjour
 					# (change requires restart)
 #bonjour_name = ''			# defaults to the computer name
@@ -77,13 +81,17 @@ max_connections = 100			# (change requires restart)
 
 #authentication_timeout = 1min		# 1s-600s
 #ssl = off				# (change requires restart)
+ssl = <%= ssl ? "on " : "off" %>
 #ssl_ciphers = 'HIGH:MEDIUM:+3DES:!aNULL' # allowed SSL ciphers
 					# (change requires restart)
 #ssl_prefer_server_ciphers = on		# (change requires restart)
 #ssl_ecdh_curve = 'prime256v1'		# (change requires restart)
 #ssl_cert_file = 'server.crt'		# (change requires restart)
+ssl_cert_file = '/var/www/miq/vmdb/certs/postgres.crt'
 #ssl_key_file = 'server.key'		# (change requires restart)
+ssl_key_file = '/var/www/miq/vmdb/certs/postgres.key'
 #ssl_ca_file = ''			# (change requires restart)
+ssl_ca_file = '/var/www/miq/vmdb/certs/root.crt'
 #ssl_crl_file = ''			# (change requires restart)
 #password_encryption = on
 #db_user_namespace = off
@@ -98,10 +106,13 @@ max_connections = 100			# (change requires restart)
 
 #tcp_keepalives_idle = 0		# TCP_KEEPIDLE, in seconds;
 					# 0 selects the system default
+tcp_keepalives_idle = 3
 #tcp_keepalives_interval = 0		# TCP_KEEPINTVL, in seconds;
 					# 0 selects the system default
+tcp_keepalives_interval = 75
 #tcp_keepalives_count = 0		# TCP_KEEPCNT;
 					# 0 selects the system default
+tcp_keepalives_count = 9
 
 
 #------------------------------------------------------------------------------
@@ -141,6 +152,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 #max_files_per_process = 1000		# min 25
 					# (change requires restart)
 #shared_preload_libraries = ''		# (change requires restart)
+shared_preload_libraries = 'pglogical,repmgr_funcs'
 
 # - Cost-Based Vacuum Delay -
 
@@ -160,6 +172,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 #effective_io_concurrency = 1		# 1-1000; 0 disables prefetching
 #max_worker_processes = 8
+max_worker_processes = 10
 
 
 #------------------------------------------------------------------------------
@@ -170,6 +183,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 #wal_level = minimal			# minimal, archive, hot_standby, or logical
 					# (change requires restart)
+wal_level = logical
 #fsync = on				# turns forced synchronization on or off
 #synchronous_commit = on		# synchronization level;
 					# off, local, remote_write, or on
@@ -184,8 +198,10 @@ dynamic_shared_memory_type = posix	# the default is the first option
 #wal_compression = off			# enable compression of full-page writes
 #wal_log_hints = off			# also do full page writes of non-critical updates
 					# (change requires restart)
+wal_log_hints = on
 #wal_buffers = -1			# min 32kB, -1 sets based on shared_buffers
 					# (change requires restart)
+wal_buffers = 16MB
 #wal_writer_delay = 200ms		# 1-10000 milliseconds
 
 #commit_delay = 0			# range 0-100000, in microseconds
@@ -197,6 +213,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 #max_wal_size = 1GB
 #min_wal_size = 80MB
 #checkpoint_completion_target = 0.5	# checkpoint target duration, 0.0 - 1.0
+checkpoint_completion_target = 0.9
 #checkpoint_warning = 30s		# 0 disables
 
 # - Archiving -
@@ -221,11 +238,14 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 #max_wal_senders = 0		# max number of walsender processes
 				# (change requires restart)
+max_wal_senders = 10
 #wal_keep_segments = 0		# in logfile segments, 16MB each; 0 disables
 #wal_sender_timeout = 60s	# in milliseconds; 0 disables
+wal_sender_timeout = 0
 
 #max_replication_slots = 0	# max number of replication slots
 				# (change requires restart)
+max_replication_slots = 10
 #track_commit_timestamp = off	# collect timestamp of transaction commit
 				# (change requires restart)
 
@@ -244,6 +264,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 #hot_standby = off			# "on" allows queries during recovery
 					# (change requires restart)
+hot_standby = on
 #max_standby_archive_delay = 30s	# max delay before canceling queries
 					# when reading WAL from archive;
 					# -1 allows indefinite delay
@@ -328,8 +349,9 @@ logging_collector = on			# Enable capturing of stderr and csvlog
 # These are only used if logging_collector is on:
 log_directory = 'pg_log'		# directory where log files are written,
 					# can be absolute or relative to PGDATA
-log_filename = 'postgresql-%a.log'	# log file name pattern,
+#log_filename = 'postgresql-%a.log'	# log file name pattern,
 					# can include strftime() escapes
+log_filename = 'postgresql.log'
 #log_file_mode = 0600			# creation mode for log files,
 					# begin with 0 to use octal notation
 log_truncate_on_rotation = on		# If on, an existing log file with the
@@ -340,9 +362,10 @@ log_truncate_on_rotation = on		# If on, an existing log file with the
 					# or size-driven rotation.  Default is
 					# off, meaning append to existing files
 					# in all cases.
-log_rotation_age = 1d			# Automatic rotation of logfiles will
+#log_rotation_age = 1d			# Automatic rotation of logfiles will
 					# happen after that time.  0 disables.
-log_rotation_size = 0			# Automatic rotation of logfiles will
+log_rotation_age = 0
+#log_rotation_size = 0			# Automatic rotation of logfiles will
 					# happen after that much log output.
 					# 0 disables.
 
@@ -398,6 +421,7 @@ log_rotation_size = 0			# Automatic rotation of logfiles will
 					# and their durations, > 0 logs only
 					# statements running at least this number
 					# of milliseconds
+log_min_duration_statement = 5000
 
 
 # - What to Log -
@@ -408,11 +432,13 @@ log_rotation_size = 0			# Automatic rotation of logfiles will
 #debug_pretty_print = on
 #log_checkpoints = off
 #log_connections = off
+log_connections = on
 #log_disconnections = off
+log_disconnections = on
 #log_duration = off
 #log_error_verbosity = default		# terse, default, or verbose messages
 #log_hostname = off
-log_line_prefix = '< %m >'			# special values:
+#log_line_prefix = '< %m >'			# special values:
 					#   %a = application name
 					#   %u = user name
 					#   %d = database name
@@ -431,8 +457,9 @@ log_line_prefix = '< %m >'			# special values:
 					#   %q = stop here in non-session
 					#        processes
 					#   %% = '%'
-					# e.g. '<%u%%%d> '
+log_line_prefix = '%t:%r:%c:%u@%d:[%p]:'
 #log_lock_waits = off			# log lock waits >= deadlock_timeout
+log_lock_waits = on
 #log_statement = 'none'			# none, ddl, mod, all
 #log_replication_commands = off
 #log_temp_files = -1			# log temporary files equal or larger
@@ -480,14 +507,19 @@ log_timezone = 'US/Eastern'
 					# their durations, > 0 logs only
 					# actions running at least this number
 					# of milliseconds.
+log_autovacuum_min_duration = 0
 #autovacuum_max_workers = 3		# max number of autovacuum subprocesses
 					# (change requires restart)
 #autovacuum_naptime = 1min		# time between autovacuum runs
+autovacuum_naptime = 5min
 #autovacuum_vacuum_threshold = 50	# min number of row updates before
 					# vacuum
+autovacuum_vacuum_threshold = 500
 #autovacuum_analyze_threshold = 50	# min number of row updates before
 					# analyze
+autovacuum_analyze_threshold = 500
 #autovacuum_vacuum_scale_factor = 0.2	# fraction of table size before vacuum
+autovacuum_vacuum_scale_factor = 0.05
 #autovacuum_analyze_scale_factor = 0.1	# fraction of table size before analyze
 #autovacuum_freeze_max_age = 200000000	# maximum XID age before forced vacuum
 					# (change requires restart)
@@ -567,6 +599,7 @@ default_text_search_config = 'pg_catalog.english'
 #------------------------------------------------------------------------------
 
 #deadlock_timeout = 1s
+deadlock_timeout = 5s
 #max_locks_per_transaction = 64		# min 10
 					# (change requires restart)
 #max_pred_locks_per_transaction = 64	# min 10
@@ -583,11 +616,13 @@ default_text_search_config = 'pg_catalog.english'
 #backslash_quote = safe_encoding	# on, off, or safe_encoding
 #default_with_oids = off
 #escape_string_warning = on
+escape_string_warning = off
 #lo_compat_privileges = off
 #operator_precedence_warning = off
 #quote_all_identifiers = off
 #sql_inheritance = on
 #standard_conforming_strings = on
+standard_conforming_strings = off
 #synchronize_seqscans = on
 
 # - Other Platforms and Clients -
