Always use hostssl in pg_hba.conf

--- a/TEMPLATE/var/opt/rh/rh-postgresql95/lib/pgsql/data/pg_hba.conf.erb
+++ b/TEMPLATE/var/opt/rh/rh-postgresql95/lib/pgsql/data/pg_hba.conf.erb
@@ -1,5 +1,4 @@
 # TYPE  DATABASE USER  ADDRESS       METHOD
 local   all      all                 peer map=usermap
-<%= "#" if ssl%>host    all      all   all           md5
-<%= "#" unless ssl %>hostssl all      all   all           md5
+hostssl all      all   all           md5
 host  replication  all  all  md5
