--- a/TEMPLATE/etc/httpd/conf.d/manageiq-external-auth.conf.erb
+++ b/TEMPLATE/etc/httpd/conf.d/manageiq-external-auth.conf.erb
@@ -2,15 +2,12 @@
 LoadModule authnz_pam_module modules/mod_authnz_pam.so
 LoadModule intercept_form_submit_module modules/mod_intercept_form_submit.so
 LoadModule lookup_identity_module modules/mod_lookup_identity.so
-LoadModule auth_kerb_module modules/mod_auth_kerb.so
 
 <Location /dashboard/kerberos_authenticate>
-  AuthType           Kerberos
-  AuthName           "Kerberos Login"
-  KrbMethodNegotiate On
-  KrbMethodK5Passwd  Off
-  KrbAuthRealms      <%= realm %>
-  Krb5KeyTab         /etc/http.keytab
+  AuthType           GSSAPI
+  AuthName           "GSSAPI Single Sign On Login"
+  GssapiCredStore    keytab:/etc/http.keytab
+  GssapiLocalName    on
   Require            pam-account httpd-auth
 
   ErrorDocument 401 /proxy_pages/invalid_sso_credentials.js
