--- a/TEMPLATE/etc/httpd/conf.d/manageiq-external-auth-openidc.conf.erb
+++ b/TEMPLATE/etc/httpd/conf.d/manageiq-external-auth-openidc.conf.erb
@@ -18,10 +18,11 @@ OIDCOAuthIntrospectionEndpointAuth client_secret_basic
   Require   valid-user
 </Location>
 
-<LocationMatch ^/ui/service.*$>
+<Location /ui/service/oidc_login>
   AuthType  openid-connect
   Require   valid-user
-</LocationMatch>
+  Header    set Set-Cookie "miq_oidc_access_token=%{OIDC_access_token}e; Max-Age=10; Path=/ui/service"
+</Location>
 
 <LocationMatch ^/api(?!\/(v[\d\.]+\/)?product_info$)>
   SetEnvIf Authorization '^Basic +YWRtaW46'     let_admin_in
