set oidc cookie same site
Set the oidc cookie to have SameSite=true

It is best practices to leverage SameSite value in cookies

--- a/TEMPLATE/etc/httpd/conf.d/manageiq-external-auth-openidc.conf.erb
+++ b/TEMPLATE/etc/httpd/conf.d/manageiq-external-auth-openidc.conf.erb
@@ -13,6 +13,7 @@ OIDCOAuthClientID                  <%= oidc_client_id %>
 OIDCOAuthClientSecret              <%= oidc_client_secret %>
 OIDCOAuthIntrospectionEndpoint     <%= oidc_introspection_endpoint %>
 OIDCOAuthIntrospectionEndpointAuth client_secret_basic
+OIDCCookieSameSite                 On
 
 <Location /oidc_login>
   AuthType  openid-connect
